--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
 <p>The <a href="install/README/">installation section</a> will show you how to create a virtual development environment.</p>
 <h2 id="contributing">Contributing</h2>
 <p>If you would like to contribute, please get involved with the <a href="https://github.com/Islandora/Islandora-Fedora4-Interest-Group">Islandora Fedora 4 Interest Group</a>. We love to hear from you!</p>
+<p>If you would like to contribute code to the project, you need to be covered by an Islandora Foundation <a href="http://islandora.ca/sites/default/files/islandora_cla.pdf">Contributor License Agreement</a> or <a href="http://islandora.ca/sites/default/files/islandora_ccla.pdf">Corporate Contributor Licencse Agreement</a>. Please see the <a href="http://islandora.ca/resources/contributors">Contributors</a> pages on Islandora.ca for more information.</p>
 <h2 id="sponsors">Sponsors</h2>
 <ul>
 <li>LYRASIS</li>
