Add Simon Fraser University to sponsors.

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
 <li>University of Prince Edward Island</li>
 <li>University of Manitoba</li>
 <li>University of Limerick</li>
+<li>Simon Fraser University</li>
 </ul>
 <h2 id="maintainers">Maintainers</h2>
 <ul>
