Add PALS to sponser list, and fix Storm copypasta.

--- a/contributing/contributing/index.html
+++ b/contributing/contributing/index.html
@@ -195,9 +195,9 @@
 <p>Take a look at <a href="https://help.github.com/articles/creating-a-pull-request">Creating a pull request</a>.  In a nutshell you
 need to:</p>
 <ol>
-<li><a href="https://help.github.com/articles/fork-a-repo">Fork</a> the Storm GitHub repository at <a href="https://github.com/apache/storm/">https://github.com/apache/storm/</a> to your personal GitHub account.  See <a href="https://help.github.com/articles/fork-a-repo">Fork a repo</a> for detailed instructions.</li>
+<li><a href="https://help.github.com/articles/fork-a-repo">Fork</a> the Islandora GitHub repository at <a href="https://github.com/islandora-labs/islandora">https://github.com/islandora-labs/islandora</a> to your personal GitHub account.  See <a href="https://help.github.com/articles/fork-a-repo">Fork a repo</a> for detailed instructions.</li>
 <li>Commit any changes to your fork.</li>
-<li>Send a <a href="https://help.github.com/articles/creating-a-pull-request">pull request</a> to the Storm GitHub repository that you forked in step 1.  If your pull request is related to an existing Storm JIRA ticket -- for instance, because you reported a bug/issue earlier -- then prefix the title of your pull request with the corresponding issue number (e.g. <code>ISLANDORA-123: ...</code>).</li>
+<li>Send a <a href="https://help.github.com/articles/creating-a-pull-request">pull request</a> to the Islandora GitHub repository that you forked in step 1.  If your pull request is related to an existing Islandora issue -- for instance, because you reported a bug/issue earlier -- then prefix the title of your pull request with the corresponding issue number (e.g. <code>ISLANDORA-123: ...</code>).</li>
 </ol>
 <p>You may want to read <a href="https://help.github.com/articles/syncing-a-fork">Syncing a fork</a> for instructions on how to keep your fork up to date with the latest changes of the upstream (official) <code>islandora</code> repository.</p>
 <h2 id="license-agreements">License Agreements</h2>
