--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
 <li>University of Manitoba</li>
 <li>University of Limerick</li>
 <li>Simon Fraser University</li>
+<li>PALS</li>
 </ul>
 <h2 id="maintainers">Maintainers</h2>
 <ul>
